--- a/src/components/Home/Services/OtherDetail.module.css
+++ b/src/components/Home/Services/OtherDetail.module.css
@@ -25,6 +25,7 @@
   margin-bottom: 1.3rem;
   box-shadow: 0 0 32px 1px #00000014;
   background-color: var(--white);
+  list-style: none;
 }
 
 .svg {
