add infinite scroll package and Team component

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 a,
@@ -27,8 +28,40 @@ button {
   text-decoration: none;
 }
 
-
 img {
   display: block;
 }
+
+::selection {
+  background-color: var(--green);
+}
+
+.carousel-initialized {
+  overflow: visible !important;
+}
+
+.carousel-next,
+.carousel-prev {
+  background-color: var(--white) !important;
+  height: 72px !important;
+  width: 72px !important;
+  transform: translateY(-90px);
+}
+
+.carousel-prev {
+  right: 105px !important;
+  left: auto !important;
+  background-image: none !important;
+  background-repeat: no-repeat;
+}
+
+.carousel-next::before {
+  background-image: url(./assets/arrow-right.svg) !important;
+}
+
+.carousel-prev::before {
+  background-image: url(./assets/arrow-right.svg) !important;
+  transform: rotate(180deg);
+}
+
 
