--- a/src/components/Home/Header/Illustration.module.css
+++ b/src/components/Home/Header/Illustration.module.css
@@ -5,3 +5,10 @@
 .illustration img {
     width: 100%;
 }
+
+@media screen and (min-width: 768px) {
+    .illustration {
+        margin-top: 2rem;
+        margin-bottom: 1.5rem;
+    }
+}
