--- a/src/components/Home/HomeBlog/HomeBlog.module.css
+++ b/src/components/Home/HomeBlog/HomeBlog.module.css
@@ -10,11 +10,33 @@
 .main{
     margin: 2rem 0;
     padding: 1rem 0;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 
 .mainTitle{
     font-weight: 400;
     font-family: var(--main-font);
     line-height: 45px;
+    font-size: 1.875rem;
+}
+
+@media screen and (min-width: 768px) {
+  .HomeBlog {
+    padding: 3rem;
+  }
+
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 4.5rem;
+  }
+
+  .listBox {
+    margin: 0;
+  }
+
+  .mainTitle {
+    font-size: 2.25rem;
+    line-height: 54px;
+  }
 }
