--- a/src/components/Home/HomeBlog/TeamBlog.module.css
+++ b/src/components/Home/HomeBlog/TeamBlog.module.css
@@ -1,6 +1,3 @@
-.teamBlog {
-  border: 1px solid;
-}
 
 .header {
   text-align: center;
@@ -23,7 +20,7 @@
 }
 
 .blogWrapper {
-  border: 1px solid;
+  /* border: 1px solid; */
   padding: 1rem 0;
 }
 
@@ -39,4 +36,36 @@
   font-family: var(--sub-font);
   cursor: pointer;
   line-height: 1rem;
+  font-size: 1rem;
+}
+
+@media screen and (min-width: 768px)  {
+  .teamBlog {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .headerTitle {
+    font-size: 1.25rem;
+  }
+
+  .headerText {
+    font-size: 3rem;
+    line-height: 74.88px;
+  }
+
+  .blogWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-auto-rows: 1fr;
+    grid-gap: 1.5rem;
+  }
+
+  .loadBtn {
+    width: auto;
+    margin: 0 auto;
+    padding: 1.5rem 4.3rem;
+    font-size: 1.25rem;
+  }
 }
