--- a/src/components/Home/Services/Detail.module.css
+++ b/src/components/Home/Services/Detail.module.css
@@ -1,10 +1,6 @@
 .detailContainer {
-    border: 1px solid;
+    /* border: 1px solid; */
     margin: 2rem 0;
-}
-
-.mainContent{
-    border: 1px solid;
 }
 
 .mainTitle {
@@ -16,8 +12,8 @@
 }
 
 .mainText{
-    /* border: 1px solid; */
     margin: 1rem 0;
+    padding: 0.5rem 0;
 }
 
 
@@ -25,14 +21,9 @@
     display: flex;
     margin: 1.5rem 0;
     align-items: center;
-    border: 1px solid;
+    /* border: 1px solid; */
     list-style: none;
 }
-
-/* svg{
-    margin-right: 1.5rem;
-
-} */
 
 .svg {
     margin-right: 1.5rem;
@@ -43,11 +34,9 @@
     line-height: 1.6rem;
     font-family: var(--sub-font);
     color: var(--black);
-    padding-top: 0.5rem;
 }
 
 .button{
-    border: 1px solid;
     width: 100%;
     padding: 1.25rem;
     border-radius: 50px;
@@ -59,4 +48,34 @@
     font-size: 1.25rem;
     font-family: var(--sub-font);
     margin: 2rem 0 1rem 0;
+}
+
+@media screen and (min-width: 768px) {
+    .detailContainer {
+        margin-top: 4rem;
+    }
+
+    .mainDetail{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .figure {
+        margin-right: 3rem;
+    }
+
+    .mainTitle {
+        font-size: 2.25rem;
+        line-height: 54px;
+    }
+
+    .mainInfo{
+        font-size: 1.25rem;
+        line-height: 32px;
+    }
+
+    .button {
+        width: auto;
+        padding: 1.1rem 3rem;
+    }
 }
