--- a/src/components/Home/Services/Feature.module.css
+++ b/src/components/Home/Services/Feature.module.css
@@ -1,11 +1,8 @@
 .feature {
-  border: 1px solid;
   margin: 1rem 0;
 }
 
 .featureCard {
-  /* border: 1px solid red; */
-  /* margin: 2.5rem 0; */
   margin-top: 2rem;
 }
 
@@ -15,7 +12,6 @@ figure img {
 }
 
 .featureContent {
-  border: 1px solid;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
@@ -58,3 +54,28 @@ figure img {
     margin-left: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .feature {
+    display: flex;
+    justify-content: center;
+  }
+
+  .feature > * + * {
+    margin-left: 3rem;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    padding-right:1rem ;
+  }
+
+  .text {
+    font-size: 1.25rem;
+    line-height: 32px;
+  }
+
+  .link {
+    font-size: 1.25rem;
+    align-items: normal;
+  }
+}
