--- a/src/components/Home/Services/OtherDetail.module.css
+++ b/src/components/Home/Services/OtherDetail.module.css
@@ -20,7 +20,6 @@
   display: flex;
   padding: 1rem 1.3rem;
   border-radius: 4px;
-  /* align-items: center; */
   margin-bottom: 1.3rem;
   box-shadow: 0 0 32px 1px #00000014;
   background-color: var(--white);
@@ -28,17 +27,15 @@
 }
 
 .svg {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .text {
   font-family: var(--sub-font);
   font-size: 0.8rem;
   font-weight: 600;
-  /* line-height: 170%; */
   line-height: 1.53125rem;
-  /* line-height: 24.5px; */
-  color: var(--black);
+  color: var(--dark-blue);
 }
 
 .list:hover {
@@ -50,6 +47,32 @@
 }
 
 .list:hover svg path {
-    stroke: var(--white);
+  stroke: var(--white);
 }
 
+@media screen and (min-width: 768px) {
+  .otherDetailContainer {
+    padding: 3rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-row-gap: 4rem;
+    grid-column-gap: 3rem;
+    /* margin-top: 3rem; */
+  }
+
+  .header {
+    font-size: 2.25rem;
+    line-height: 54px;
+    /* grid-template-columns: 1/3; */
+    grid-area: 1/1/1/3;
+  }
+
+  .listBox {
+    margin: 0;
+  }
+  .text {
+    font-size: 1rem;
+    line-height: 28px;
+  }
+}
