--- a/src/components/Home/Team/Team.module.css
+++ b/src/components/Home/Team/Team.module.css
@@ -50,3 +50,16 @@
   border: 1px solid;
   background-color: red;
 }
+
+@media screen and (min-width: 768px) {
+  .sliderContainer {
+    padding: 3rem;
+  }
+
+  .sliderHeader {
+    display: flex;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    margin-bottom: 1rem;
+  }
+}
