--- a/src/components/Home/Header/Header.module.css
+++ b/src/components/Home/Header/Header.module.css
@@ -7,10 +7,6 @@
   overflow: hidden;
 }
 
-/* .navigationContainer {
-  padding: 1rem 0;
-} */
-
 .headerContainer::after {
   content: "";
   display: block;
@@ -27,6 +23,7 @@
 
 .navigationContainer {
   display: flex;
+  align-items: center;
   z-index: 2;
 }
 
@@ -44,7 +41,6 @@
 .header {
   position: relative;
   z-index: 3;
-  /* border: 1px solid; */
   padding: 2rem 0;
 }
 
@@ -58,16 +54,14 @@
 
 .headerContext {
   font-size: 0.8rem;
-  /* border: 1px solid; */
   padding: 1rem 0;
   font-family: var(--main-font);
-  color: var(--white);
+  color: #f1f1f1;
   line-height: 1.5rem;
   padding-right: 2rem;
 }
 
 .headerNavigation {
-  /* border: 1px solid; */
   display: flex;
   flex-direction: column;
   padding-top: 1rem;
@@ -117,5 +111,55 @@
     padding: 1.3rem 3.5rem;
     margin-right: 1.3rem;
   }
+}
 
+@media screen and (min-width: 1200px) {
+  .headerContainer {
+    padding: 3rem 5rem;
+  }
+
+  .headerWrapper {
+    display: grid;
+    grid-template-columns: 1.3fr 1fr;
+    grid-column-gap: 7rem;
+    margin-top: 1.5rem;
+  }
+
+  .headerTitle {
+    padding-top: 0.5rem;
+  }
+
+  .headerNavigation button {
+    padding: 1rem 3rem;
+  }
+
+  .navigation {
+    display: block;
+    margin-left: auto;
+    position: static;
+    z-index: 11;
+  }
+
+  .navigation a {
+    font-size: 1rem;
+    margin-left: 40px;
+    font-family: var(--sub-font);
+    font-weight: 600;
+    color: var(--white);
+  }
+
+  .navigation button {
+    margin-left: 40px;
+    padding: 0.8rem 2.6rem;
+    border-radius: 24px;
+    background-color: var(--white);
+    font-size: 1rem;
+    color: var(--dark-blue);
+    font-family: var(--sub-font);
+    font-weight: 700;
+  }
+
+  .hamburger {
+    display: none;
+  }
 }
