--- a/src/components/Home/Header/Illustration.module.css
+++ b/src/components/Home/Header/Illustration.module.css
@@ -1,14 +1,38 @@
 .illustration {
     width: 100%;
+    z-index: 11;
 }
 
 .illustration img {
     width: 100%;
+    z-index: 111;
 }
 
 @media screen and (min-width: 768px) {
     .illustration {
         margin-top: 2rem;
         margin-bottom: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .illustration {
+        /* background-color: red; */
+        position: relative;
+        z-index: 10;
+        overflow: hidden;
+    }
+
+    .illustration::after {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        z-index: -1;
+        background-color: var(--dark-blue);
+        /* background-color: red; */
+        border-radius:15px ;
+
     }
 }
