--- a/src/components/Home/HomeBlog/HomeBlog.module.css
+++ b/src/components/Home/HomeBlog/HomeBlog.module.css
@@ -1,23 +1,22 @@
-.HomeBlog{
-    padding: 2rem 1rem;
+.HomeBlog {
+  padding: 2rem 1rem;
 }
 
-.listBox{
-    list-style: none;
-    margin: 1rem 0;
+.listBox {
+  list-style: none;
+  margin: 1rem 0;
 }
 
-.main{
-    margin: 2rem 0;
-    padding: 1rem 0;
-    /* border: 1px solid; */
+.main {
+  margin: 2rem 0;
+  padding: 1rem 0;
 }
 
-.mainTitle{
-    font-weight: 400;
-    font-family: var(--main-font);
-    line-height: 45px;
-    font-size: 1.875rem;
+.mainTitle {
+  font-weight: 400;
+  font-family: var(--main-font);
+  line-height: 45px;
+  font-size: 1.875rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -38,5 +37,15 @@
   .mainTitle {
     font-size: 2.25rem;
     line-height: 54px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .HomeBlog {
+    padding: 5rem;
+  }
+
+  .main {
+    margin-top: 4rem;
   }
 }
