--- a/src/components/Home/Services/Detail.module.css
+++ b/src/components/Home/Services/Detail.module.css
@@ -1,5 +1,4 @@
 .detailContainer {
-    /* border: 1px solid; */
     margin: 2rem 0;
 }
 
@@ -21,7 +20,6 @@
     display: flex;
     margin: 1.5rem 0;
     align-items: center;
-    /* border: 1px solid; */
     list-style: none;
 }
 
@@ -67,6 +65,7 @@
     .mainTitle {
         font-size: 2.25rem;
         line-height: 54px;
+        /* padding-right: 5rem; */
     }
 
     .mainInfo{
@@ -78,4 +77,17 @@
         width: auto;
         padding: 1.1rem 3rem;
     }
+}
+
+
+@media screen and (min-width: 768px) {
+   .mainDetail {
+    justify-items: left;
+    align-items: center;
+    grid-column-gap: 5rem;
+   }
+
+   .figure {
+    margin: 0;
+   }
 }
