--- a/src/components/Home/Services/Feature.module.css
+++ b/src/components/Home/Services/Feature.module.css
@@ -79,3 +79,27 @@ figure img {
     align-items: normal;
   }
 }
+
+@media screen and (min-width: 1200px) {
+  .feature {
+    margin: 1.5rem 0;
+  }
+
+  .figureImg{
+    max-width: 300px;
+  }
+
+   .feature > * + * {
+    margin-left: 0;
+    margin-left: 5rem;
+  }
+
+
+  .text {
+    margin: 1rem 0;
+  }
+
+  .featureContent {
+    max-width: 300px;
+  }
+}
