--- a/src/components/Home/Services/OtherDetail.module.css
+++ b/src/components/Home/Services/OtherDetail.module.css
@@ -1,10 +1,8 @@
 .otherDetailContainer {
-  border: 1px solid;
   padding: 1rem 0;
 }
 
 .header {
-  border: 1px solid;
   font-family: var(--main-font);
   font-weight: 400;
   color: var(--black);
@@ -58,13 +56,11 @@
     grid-template-rows: auto 1fr;
     grid-row-gap: 4rem;
     grid-column-gap: 3rem;
-    /* margin-top: 3rem; */
   }
 
   .header {
     font-size: 2.25rem;
     line-height: 54px;
-    /* grid-template-columns: 1/3; */
     grid-area: 1/1/1/3;
   }
 
@@ -74,5 +70,37 @@
   .text {
     font-size: 1rem;
     line-height: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .otherDetailContainer {
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-column-gap: 5rem;
+    grid-row-gap: 0;
+    align-items: left;
+  }
+
+  .header {
+    grid-area: 1/1/1/2;
+    align-self: flex-end;
+    padding-bottom: 1.5rem;
+    margin-top: -4rem;
+  }
+
+  .image {
+    grid-area: 1/2/3/3;
+  }
+
+  .image img {
+    width: 90%;
+  }
+
+  .listBox {
+    grid-area: 2/1;
+    width: 100%;
   }
 }
