--- a/src/components/Footer/Main.module.css
+++ b/src/components/Footer/Main.module.css
@@ -56,6 +56,7 @@
   border: 1px solid var(--white);
   outline: none;
   color: #333333;
+  font-family: var(--sub-font);
 }
 
 .input::placeholder {
