--- a/src/components/Home/Header/Navigation.module.css
+++ b/src/components/Home/Header/Navigation.module.css
@@ -1,18 +1,56 @@
 .navigationContainer {
   display: flex;
   align-items: center;
-  z-index: 2;
+  z-index: 12;
+  position: relative;
 }
 
 .navigation {
-  position: fixed;
-  display: none;
+  background-color: var(--dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  z-index: 111;
+  position: absolute;
+  top: 0;
+  transform: translateY(-120%);
+  transition: transform 500ms;
+}
+
+.show {
+  transform: translateY(60px);
+}
+
+.navigation a {
+  margin: 1.5rem 0;
+  font-size: 0.8rem;
+  font-weight: 600;
+  font-family: var(--sub-font);
+  color: var(--white);
+}
+
+.navigation button {
+  border-radius: 24px;
+  background-color: var(--white);
+  padding: 0.8rem 2.6rem;
+  margin: 1rem 0;
+  width: 100%;
+  max-width: 300px;
 }
 
 .hamburger {
   margin-left: auto;
   outline: none;
   z-index: 2;
+  z-index: 555;
+  position: relative;
+  padding: 0.5rem;
+}
+
+.active {
+  background-color: var(--dark-blue);
 }
 
 @media screen and (min-width: 1200px) {
@@ -21,21 +59,26 @@
     margin-left: auto;
     position: static;
     z-index: 11;
+    background-color: transparent;
+    transform: none;
+    transition: none;
+    width: auto;
+  }
+
+  .show {
+    transform: none;
   }
 
   .navigation a {
     font-size: 1rem;
+    margin: 0;
     margin-left: 40px;
-    font-family: var(--sub-font);
-    font-weight: 600;
-    color: var(--white);
   }
 
   .navigation button {
     margin-left: 40px;
     padding: 0.8rem 2.6rem;
-    border-radius: 24px;
-    background-color: var(--white);
+    width: auto;
     font-size: 1rem;
     color: var(--dark-blue);
     font-family: var(--sub-font);
