--- a/src/components/Footer/Main.module.css
+++ b/src/components/Footer/Main.module.css
@@ -149,3 +149,10 @@
   }
   
 }
+
+@media screen and (min-width: 1500px) {
+  .FooterMain::after  {
+    max-height: 50vmin;
+    max-width: 60vmin;
+  }
+}
