--- a/src/components/About/AboutUs/About.module.css
+++ b/src/components/About/AboutUs/About.module.css
@@ -7,7 +7,6 @@
 }
 
 .aboutHeader {
-  border: 1px solid;
   text-align: center;
 }
 
@@ -28,33 +27,93 @@
 }
 
 .AboutMain {
-  border: 1px solid;
   padding: 1rem 0;
   text-align: center;
   font-weight: 400;
-  margin-top:1rem ;
+  margin-top: 1rem;
 }
 
 .aboutContent {
-    margin: 1rem 0 3rem 0;
-    border: 1px solid;
+  margin: 1rem 0 3rem 0;
 }
 
 .aboutTitle {
-    font-size: 2rem;
-    font-family: var(--main-font);
-    color: var(--white);
+  font-size: 2rem;
+  font-family: var(--main-font);
+  color: var(--white);
 }
 
 .unique {
-    color: var(--green);
+  color: var(--green);
 }
 
 .content {
-    padding: 0.7rem 1rem;
-    font-size: 1rem;
-    line-height: 24px;
-    color: var(--light-gray);
-    font-family: var(--sub-font);
-    font-weight: 400;
+  padding: 0.7rem 1rem;
+  font-size: 1rem;
+  line-height: 24px;
+  color: var(--light-gray);
+  font-family: var(--sub-font);
+  font-weight: 400;
+}
+
+@media screen and (min-width: 768px) {
+  .aboutWrapper {
+    padding: 3rem;
+  }
+
+  .aboutContainer {
+    padding: 0;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .subTitle {
+    font-size: 1.25rem;
+  }
+
+  .title {
+    max-width: 800px;
+    margin: 0 auto;
+    font-size: 3rem;
+    line-height: 72px;
+  }
+
+  .AboutMain {
+    margin-top: 1rem;
+  }
+
+  .aboutContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem;
+    margin: 1rem 0 4rem 0;
+  }
+
+  .aboutTitle {
+    text-align: left;
+    font-size: 3rem;
+  }
+
+  .aboutTitle::after {
+    content: ".";
+    color: var(--green);
+  }
+
+  .content {
+    text-align: left;
+    font-size: 1.25rem;
+    line-height: 32px;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .aboutContent {
+    grid-column-gap: 3rem;
+  }
+
+  .aboutContainer {
+    max-width: 1200px;
+  }
+
 }
