--- a/src/components/About/Header/Header.module.css
+++ b/src/components/About/Header/Header.module.css
@@ -7,40 +7,66 @@
 }
 
 .aboutHeader {
-    color: var(--white);
-    margin: 2rem 0;
-    text-align: center;
+  color: var(--white);
+  text-align: center;
+  max-width: 450px;
+  margin: 2rem auto;
 }
 
-.title{
-    font-size: 2.1875rem;
-    border: 1px solid;
-    font-weight: 400;
-    font-family: var(--main-font);
-    line-height: 54px;
+.title {
+  font-size: 2.1875rem;
+  font-weight: 400;
+  font-family: var(--main-font);
+  line-height: 54px;
 }
 
 .content {
-    border: 1px solid;
-    color: var(--light-gray);
-    margin-top: 1rem;
-    font-size: 0.8rem;
-    font-weight: 400;
-    line-height: 24.5px;
-    font-family: var(--sub-font);
+  color: var(--light-gray);
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 24.5px;
+  font-family: var(--sub-font);
 }
-
-
-
 
 @media screen and (min-width: 768px) {
   .aboutHeaderMain {
     padding: 1.5rem 3rem;
+    padding-bottom: 5rem;
+  }
+
+  .aboutHeader {
+    max-width: 600px;
+  }
+
+  .title {
+    font-size: 4rem;
+    line-height: 84px;
+  }
+  .content {
+    font-size: 1rem;
+    line-height: 28px;
+    padding: 0 2rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .aboutHeaderMain {
+    max-width: 1800px;
+    margin: 0 auto;
+  }
+
+  .aboutHeaderMain {
     padding: 2rem 5rem;
+    padding-bottom: 7rem;
+  }
+
+  .aboutHeader {
+    max-width: 800px;
+  }
+
+  .content {
+    max-width: 600px;
+    margin: 1rem auto;
   }
 }
