--- a/src/components/About/Stats/Stats.module.css
+++ b/src/components/About/Stats/Stats.module.css
@@ -5,7 +5,6 @@
 .statsMain {
   padding: 2rem 1rem;
   text-align: center;
-  border: 1px solid red;
   font-family: var(--main-font);
 }
 
@@ -21,12 +20,7 @@
   line-height: 54.6px;
 }
 
-.stats {
-  border: 1px solid red;
-}
-
 .counter {
-  border: 1px solid;
   margin: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
@@ -39,4 +33,60 @@
 
 .name {
   color: var(--light-gray);
+}
+
+@media screen and (min-width: 768px) {
+  .statsMain {
+    padding: 3rem;
+    max-width: 600px;
+    margin:  0 auto;
+  }
+
+  .subTitle {
+    font-size: 1.25rem;
+  }
+
+  .title {
+    font-size: 3rem;
+    line-height: 72px;
+  }
+
+  .stats {
+    display: flex;
+    justify-content: center;
+  }
+
+  .counter {
+    margin: 2rem 2.5rem;
+    padding: 1rem 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .statsWrapper {
+    margin: 0 auto;
+  }
+  
+  .statsMain {
+    max-width: 1800px;
+    padding: 4rem 0;
+  }
+
+  .title {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .counter {
+    margin: 1rem 3rem;
+    margin-bottom: 0;
+  }
+
+  .value {
+    font-size: 6rem;
+  }
+
+  .name {
+    font-size: 1.5rem;
+  }
 }
