--- a/src/components/About/Story/Gallery.module.css
+++ b/src/components/About/Story/Gallery.module.css
@@ -1,5 +1,4 @@
 .gallery {
-  border: 1px solid;
   padding: 2rem 0;
 }
 
@@ -10,7 +9,7 @@
 }
 
 .storyGallery:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .storyGallery:nth-child(2),
@@ -18,11 +17,50 @@
   display: none;
 }
 
-
 .image {
   width: 100%;
   height: auto;
 }
 
+@media screen and (min-width: 768px) {
+  .gallery {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1.3fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-gap: 2rem;
+    transform: translateY(-20%);
+  }
+
+  .storyGallery {
+    margin: 0;
+    max-width: none;
+  }
 
 
+  .storyGallery:nth-child(2),
+  .storyGallery:nth-child(4) {
+    display: block;
+  }
+
+  .storyGallery:nth-child(1) {
+    grid-area: 1/1/1/2;
+  }
+
+  .storyGallery:nth-child(2) {
+    grid-area: 1/2/3/3;
+  }
+  .storyGallery:nth-child(3) {
+    grid-area: 1/3/1/4;
+  }
+  .storyGallery:nth-child(4) {
+    grid-area: 2/1/3/2;
+  }
+
+  .image {
+    height: 100%;
+  }
+
+
+}
