--- a/src/components/About/Team/Team.module.css
+++ b/src/components/About/Team/Team.module.css
@@ -1,37 +1,68 @@
 .teamWraper {
-    background-color: var(--white);
+  background-color: var(--white);
 }
 
 .teamBox {
-    border: 1px solid;
-    padding: 2rem 1rem;
+  padding: 2rem 1rem;
 }
 
 .header {
-    border: 1px solid;
-    text-align: center;
-    font-weight: 400;
+  text-align: center;
+  font-weight: 400;
 }
 
-.subTitle{
-    font-size: 1rem;
-    color: var(--gray);
-    font-family: var(--sub-font);
+.subTitle {
+  font-size: 1rem;
+  color: var(--gray);
+  font-family: var(--sub-font);
 }
 
 .title {
-    font-size: 2.1875rem;
-    padding: 1rem 0;
-    font-weight: 400;
-    font-family: var(--main-font);
-    color: var(--black);
+  font-size: 2.1875rem;
+  padding: 1rem 0;
+  font-weight: 400;
+  font-family: var(--main-font);
+  color: var(--black);
 }
 
 .text {
-    border: 1px solid green;
-    line-height: 24px;
-    font-size: 1rem;
-    color: var(--gray);
-    font-family: var(--sub-font);
+  line-height: 24px;
+  font-size: 1rem;
+  color: var(--gray);
+  font-family: var(--sub-font);
+}
 
+@media screen and (min-width: 768px) {
+  .teamBox {
+    padding: 4rem 0;
+  }
+
+  .header {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+
+  .subTitle {
+    font-size: 1.25rem;
+  }
+
+  .title {
+    font-size: 3rem;
+  }
+
+  .text {
+    font-size: 1.25rem;
+    line-height: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    max-width: 800px;
+  }
+
+  .teamBox {
+    max-width: 1800px;
+    margin: 0 auto;
+  }
 }
