--- a/src/components/About/AboutUs/About.module.css
+++ b/src/components/About/AboutUs/About.module.css
@@ -31,6 +31,7 @@
   text-align: center;
   font-weight: 400;
   margin-top: 1rem;
+  border-top: 1px solid var(--white);
 }
 
 .aboutContent {
@@ -86,7 +87,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
-    margin: 1rem 0 4rem 0;
+    margin: 2rem 0 4rem 0;
   }
 
   .aboutTitle {
@@ -115,5 +116,4 @@
   .aboutContainer {
     max-width: 1200px;
   }
-
 }
