--- a/src/components/Home/Services/OtherDetail.module.css
+++ b/src/components/Home/Services/OtherDetail.module.css
@@ -48,6 +48,15 @@
   stroke: var(--white);
 }
 
+.image {
+  width: 100%;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (min-width: 768px) {
   .otherDetailContainer {
     padding: 3rem 0;
