--- a/src/components/Blog/BlogHeader/BlogHeader.module.css
+++ b/src/components/Blog/BlogHeader/BlogHeader.module.css
@@ -158,4 +158,9 @@ a {
   .blogNavBar button {
     background-color: var(--white);
   }
+
+  .header {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
 }
