--- a/src/components/Blog/Article/Article.module.css
+++ b/src/components/Blog/Article/Article.module.css
@@ -1,5 +1,4 @@
 .articleContainer {
-  border: 1px solid;
   padding: 1rem;
 }
 
@@ -13,17 +12,14 @@
 .articleList {
   display: flex;
   flex-direction: column;
-  border: 1px solid;
 }
 
 .articleCard {
   margin: 2rem auto;
-  border: 1px solid red;
   max-width: 500px;
 }
 
 .articleSelection {
-  border: 1px solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -43,6 +39,7 @@
   font-weight: 700;
   font-size: 0.8rem;
   color: var(--dark-blue);
+  padding: 0.5rem 0;
 }
 
 .time {
