--- a/src/components/Blog/Article/ArticleSlide.module.css
+++ b/src/components/Blog/Article/ArticleSlide.module.css
@@ -1,7 +1,6 @@
 .articleCard {
   margin: 2rem auto;
   max-width: 500px;
-  border: 1px solid;
   display: grid;
 }
 
@@ -9,7 +8,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 5px;
+  align-self: flex-start;
+  padding-top: 10px;
+  align-self: flex-start;
 }
 
 .articlePic {
@@ -39,6 +40,7 @@
   line-height: 30px;
   font-family: var(--sub-font);
   padding: 0.5rem 0;
+  padding-bottom: 1.5rem;
 }
 
 .author {
@@ -59,9 +61,10 @@
 @media screen and (min-width: 768px) {
   .articleCard {
     max-width: 300px;
+    grid-template-rows: 2fr auto 0.8fr auto;
   }
 
-  .articleSelection{
+  .articleSelection {
     margin-top: 0.5rem;
   }
 
@@ -81,7 +84,7 @@
 
   .author {
     align-self: flex-end;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
   }
 
   .articlePic img {
@@ -91,5 +94,6 @@
 
   .text {
     line-height: 32px;
+    padding-bottom: 0.5rem;
   }
 }
