--- a/src/components/Blog/BlogHeader/BlogHeader.module.css
+++ b/src/components/Blog/BlogHeader/BlogHeader.module.css
@@ -6,6 +6,11 @@
   color: var(--dark-blue);
 }
 
+.main {
+  border-bottom: 2px solid var(--dark-blue);
+  padding-bottom: 2rem;
+}
+
 .imageBox {
   width: 100%;
   max-width: 500px;
@@ -15,7 +20,6 @@
 .imageBox img {
   width: 100%;
 }
-
 
 .mainTitle {
   font-size: 2.1875rem;
@@ -30,7 +34,6 @@
   max-width: 500px;
   margin: 1rem auto;
 }
-
 
 .blogDetailHeader h1 {
   font-weight: 700;
@@ -57,6 +60,7 @@
 .blogAvi {
   display: flex;
   align-items: center;
+  margin: 1rem 0;
 }
 
 .avi {
@@ -69,17 +73,14 @@
 }
 
 @media screen and (min-width: 768px) {
-
-    .header {
-        padding: 1.5rem 3rem;
-    }
-
+  .header {
+    padding: 1.5rem 3rem;
+  }
 
   .mainTitle {
     font-size: 4rem;
     margin: 3rem 0;
   }
-
 
   .blogDetailHeader h1 {
     font-size: 1rem;
@@ -101,7 +102,7 @@
 }
 
 @media screen and (min-width: 900px) {
-.headerMain {
+  .headerMain {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 2.5rem;
@@ -127,12 +128,9 @@
     margin: 0;
     margin-right: auto;
   }
-
 }
 
-
 @media screen and (min-width: 1200px) {
-
   .header {
     padding-left: 5rem;
     padding-right: 5rem;
