--- a/src/components/Home/Services/Detail.module.css
+++ b/src/components/Home/Services/Detail.module.css
@@ -63,7 +63,9 @@
 
   .mainDetail {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;    
+    grid-column-gap: 3rem;
+
   }
 
   .figure {
