--- a/src/components/Home/Header/Header.module.css
+++ b/src/components/Home/Header/Header.module.css
@@ -1,5 +1,8 @@
-.headerContainer {
+.wrapper {
   background-color: var(--dark-blue);
+}
+
+.headerContainer {
   padding: 1rem;
   position: relative;
   width: 100%;
@@ -97,8 +100,18 @@
 }
 
 @media screen and (min-width: 1200px) {
+
+  
   .headerContainer {
+    max-width: 1800px;
     padding: 2rem 5rem;
+    margin:  0 auto;
+  }
+
+
+  .headerContainer::after {
+    height: 720px;
+    width: 720px;
   }
 
   .headerWrapper {
@@ -116,3 +129,5 @@
     padding: 1rem 3rem;
   }
 }
+
+
