--- a/src/components/Home/HomeBlog/HomeBlog.module.css
+++ b/src/components/Home/HomeBlog/HomeBlog.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  background-color: var(--white);
+}
+
 .HomeBlog {
   padding: 2rem 1rem;
 }
@@ -52,6 +56,8 @@
 @media screen and (min-width: 1200px) {
   .HomeBlog {
     padding: 5rem;
+    max-width: 1800px;
+    margin: 0 auto;
   }
 
   .main {
