--- a/src/components/Home/Team/Team.module.css
+++ b/src/components/Home/Team/Team.module.css
@@ -2,6 +2,11 @@
   background-color: var(--dark-blue);
 }
 
+.sliderContainer {
+  padding: 2rem 1rem;
+  padding-bottom: 3rem;
+}
+
 @media screen and (min-width: 768px) {
   .sliderContainer {
     padding: 3rem;
