--- a/src/components/Home/Header/Header.module.css
+++ b/src/components/Home/Header/Header.module.css
@@ -35,7 +35,7 @@
   color: var(--white);
   font-weight: 400;
   font-family: var(--main-font);
-  line-height: 3rem;
+  line-height: 2.6rem;
 }
 
 .headerContext {
@@ -43,7 +43,7 @@
   padding: 1rem 0;
   font-family: var(--main-font);
   color: #f1f1f1;
-  line-height: 1.5rem;
+  line-height: 1.3rem;
   padding-right: 2rem;
 }
 
@@ -62,6 +62,12 @@
   font-size: 1.2rem;
 }
 
+.buyTemplate,
+.explore {
+  transform: translateY(20px);
+  opacity: 0;
+}
+
 .buyTemplate {
   background-color: var(--green);
   color: var(--dark-blue);
@@ -72,6 +78,64 @@
   color: var(--white);
 }
 
+.headerTitle span span {
+  transform: translateY(105%) rotate(7deg);
+}
+
+.headerTitleChange span span {
+  will-change: transform;
+  animation-name: headerTitleAnimate;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.1s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes headerTitleAnimate {
+  from {
+    transform: translateY(100%) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
+}
+
+.headerContext span span {
+  transform: translateY(120%) rotate(7deg);
+}
+
+.headerContextChange span span {
+  will-change: transform;
+  animation-name: headerContextAnimate;
+  animation-duration: 1s;
+  animation-delay: calc(1s + (0.3s * var(--line-index)));
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes headerContextAnimate {
+  from {
+    transform: translateY(100%) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
+}
+
+.buyTemplateChange {
+  transform: translateY(0);
+  opacity: 1;
+  transition: all 1s 1.2s;
+}
+
+.exploreChange {
+  transform: translateY(0);
+  opacity: 1;
+  transition: all 1s 1.3s;
+}
+
 @media screen and (min-width: 768px) {
   .headerContainer {
     padding: 1.5rem 3rem;
@@ -79,14 +143,14 @@
 
   .headerTitle {
     font-size: 3rem;
-    line-height: 74px;
+    line-height: 60px;
     padding-right: 2rem;
   }
 
   .headerContext {
     padding-right: 5rem;
     font-size: 1rem;
-    line-height: 28px;
+    line-height: 25px;
   }
 
   .headerNavigation {
@@ -100,14 +164,11 @@
 }
 
 @media screen and (min-width: 1200px) {
-
-  
   .headerContainer {
     max-width: 1800px;
     padding: 2rem 5rem;
-    margin:  0 auto;
+    margin: 0 auto;
   }
-
 
   .headerContainer::after {
     height: 720px;
@@ -129,5 +190,3 @@
     padding: 1rem 3rem;
   }
 }
-
-
