--- a/src/components/Home/Header/Marquee.module.css
+++ b/src/components/Home/Header/Marquee.module.css
@@ -1,3 +1,12 @@
+.boxContainer {
+  opacity: 0;
+}
+
+.visible{
+  opacity: 1;
+  transition: opacity 1s;
+}
+
 .headerMarquee {
   display: flex;
   margin-top: 1.5rem;
