--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,50 @@ img {
 
 .word {
   overflow: hidden;
+  display: inline-block;
 }
 
 .word span {
   display: inline-block;
+}
+
+
+.titleAnimate span span {
+  will-change: transform;
+  animation-name: animate;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.1s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes animate {
+  from {
+    transform: translateY(105%) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
+}
+
+.textAnimate span span {
+  will-change: transform;
+  animation-name: animateText;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.1s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes animateText {
+  from {
+    transform: translateY(105%) rotate(0deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
 }
