--- a/src/components/Home/HomeBlog/HomeBlog.module.css
+++ b/src/components/Home/HomeBlog/HomeBlog.module.css
@@ -13,11 +13,59 @@
 
 .teamPic {
   width: 100%;
+  position: relative;
+  overflow: hidden;
+  transform: translateX(-30px);
 }
 
 .teamPic img {
   width: 100%;
   height: auto;
+  transform: scale(1.5);
+}
+
+.teamPicAnimate {
+  position: relative;
+  transform: translateX(0);
+  transition: transform .2s ease-in;
+}
+
+.teamPicAnimate img {
+  transform: scale(1);
+  transition: transform 2s;
+}
+
+.teamPic::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--white);
+}
+
+.teamPicAnimate::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--white);
+  animation-name: teamPicAnimate;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes teamPicAnimate {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
+  }
 }
 
 .main {
@@ -30,6 +78,10 @@
   font-family: var(--main-font);
   line-height: 45px;
   font-size: 1.875rem;
+}
+
+.mainTitle span span {
+  transform: translateY(105%) rotate(0deg);
 }
 
 @media screen and (min-width: 768px) {
