--- a/src/components/Home/HomeBlog/List.module.css
+++ b/src/components/Home/HomeBlog/List.module.css
@@ -1,8 +1,9 @@
 .list {
   margin: 2rem 0;
   cursor: pointer;
+  overflow: hidden;
   padding-bottom: 5px;
-  border-bottom: 1px solid #c4c4c4;
+  /* border-bottom: 1px solid #c4c4c4; */
 }
 
 .listItem {
@@ -15,16 +16,51 @@
   transition: height 2s;
 }
 
+.boxAnimate {
+  position: relative;
+}
+
+.boxAnimate::after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: #c4c4c4;
+  position: absolute;
+  bottom: 0;
+  animation-name: widthAnimate;
+  animation-duration: 2s;
+  animation-delay: calc(1s * var(--value));
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
+}
+
+
+
+@keyframes widthAnimate {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
 .arrowDown {
   margin-left: auto;
   height: 28px;
   width: 28px;
-  transition: transform .7s;
+  transition: transform 0.7s;
+  opacity: 0;
+}
+
+.arrowAnimate {
+  opacity: 1;
+  transition: opacity 1.5s;
 }
 
 .inverted {
   transform: rotate(-180deg);
-  transition: transform .7s;
+  transition: transform 0.7s!important;
 }
 
 .listDropDown {
@@ -50,9 +86,41 @@
   transition: all 0.7s;
 }
 
+.header span span {
+  transform: translateY(105%) rotate(0);
+}
+
+.headerAnimate span span {
+  will-change: transform;
+  animation-name: headerAnimateText;
+  animation-duration: 1s;
+  animation-delay: calc((0.03s * var(--word-index)) + (1s * var(--value)));
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes headerAnimateText {
+  0% {
+    transform: translateY(105%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.listAnimate {
+  will-change: transform;
+  animation-name: animateText;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.5s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
 
 @media screen and (min-width: 768px) {
-  .list{
+  .list {
     margin: 0;
     padding-bottom: 0.5rem;
     margin-bottom: 1.5rem;
