--- a/src/components/Home/Services/Detail.module.css
+++ b/src/components/Home/Services/Detail.module.css
@@ -6,8 +6,12 @@
   font-family: var(--main-font);
   font-weight: 400;
   color: var(--black);
-  line-height: 2.8125rem;
+  line-height: 2.3125rem;
   font-size: 1.875rem;
+}
+
+.mainTitle span span {
+  transform: translateY(105%) rotate(7deg);
 }
 
 .mainText {
@@ -36,6 +40,14 @@
   font-size: 1.25rem;
   font-family: var(--sub-font);
   margin: 2rem 0 1rem 0;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.buttonAnimate {
+  transform: translateY(0);
+  opacity: 1;
+  transition: all 1s;
 }
 
 @media screen and (min-width: 768px) {
@@ -45,9 +57,8 @@
 
   .mainDetail {
     display: grid;
-    grid-template-columns: 1fr 1fr;    
+    grid-template-columns: 1fr 1fr;
     grid-column-gap: 3rem;
-
   }
 
   .figure {
@@ -56,7 +67,7 @@
 
   .mainTitle {
     font-size: 2.25rem;
-    line-height: 54px;
+    line-height: 44px;
   }
 
   .button {
