--- a/src/components/Home/Services/FeatureSlide.module.css
+++ b/src/components/Home/Services/FeatureSlide.module.css
@@ -2,9 +2,16 @@
   margin-top: 2rem;
 }
 
-.figureImg img {
+.figureImg {
+  position: relative;
+  overflow: hidden;
+}
+
+.pic {
   width: 100%;
   height: auto;
+  z-index: 4;
+  opacity: 0;
 }
 
 .featureContent {
@@ -21,14 +28,20 @@
   color: var(--black);
 }
 
+
+
+
 .text {
   margin: 0.5rem 0;
   font-size: 1rem;
-  line-height: 1.5rem;
   color: var(--gray);
   font-family: var(--sub-font);
   font-weight: 400;
-  line-height: 25.6px;
+  line-height: 20.3px;
+}
+
+.title span span, .text span span {
+  transform: translateY(105%) rotate(7deg);
 }
 
 .link {
@@ -53,6 +66,32 @@
   margin-left: 10px;
 }
 
+.picChange {
+  opacity: 1;
+  transition: all 1s linear;
+}
+
+
+.animate span span {
+  will-change: transform;
+  animation-name: animate;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.1s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes animate {
+  from {
+    transform: translateY(105%) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .title {
     font-size: 1.5rem;
@@ -61,7 +100,11 @@
 
   .text {
     font-size: 1.25rem;
-    line-height: 32px;
+    line-height: 26px;
+  }
+
+  .picChange {
+    transition: all 1s linear calc(1s * var(--delay));
   }
 }
 
