--- a/src/components/Home/Services/OtherDetail.module.css
+++ b/src/components/Home/Services/OtherDetail.module.css
@@ -6,8 +6,12 @@
   font-family: var(--main-font);
   font-weight: 400;
   color: var(--black);
-  line-height: 2.8125rem;
+  line-height: 2.3125rem;
   font-size: 1.875rem;
+}
+
+.header span span {
+  transform: translateY(105%) rotate(7deg);
 }
 
 .listBox {
@@ -32,8 +36,12 @@
   font-family: var(--sub-font);
   font-size: 0.8rem;
   font-weight: 600;
-  line-height: 1.53125rem;
+  line-height: 1.04rem;
   color: var(--dark-blue);
+}
+
+.text span span {
+  transform: translateY(105%) rotate(7deg);
 }
 
 .list:hover {
@@ -69,7 +77,7 @@
 
   .header {
     font-size: 2.25rem;
-    line-height: 54px;
+    line-height: 44px;
     grid-area: 1/1/1/3;
   }
 
@@ -78,7 +86,7 @@
   }
   .text {
     font-size: 1rem;
-    line-height: 28px;
+    line-height: 20px;
   }
 }
 
