--- a/src/components/About/AboutUs/About.module.css
+++ b/src/components/About/AboutUs/About.module.css
@@ -17,6 +17,10 @@
   color: var(--light-gray);
 }
 
+.subTitle span span {
+  transform: translateY(105%) rotate(7deg);
+}
+
 .title {
   font-size: 2.1875rem;
   font-family: var(--main-font);
@@ -26,12 +30,37 @@
   line-height: 54.6px;
 }
 
+.title span span {
+  transform: translateY(105%) rotate(7deg);
+}
+
 .AboutMain {
   padding: 1rem 0;
   text-align: center;
   font-weight: 400;
   margin-top: 1rem;
+  position: relative;
+}
+
+.mainAnimate::before {
+  content: "";
+  height: 1px;
+  width: 0%;
+  display: block;
+  position: absolute;
+  top: 0;
+  animation-name: mainAnimate;
+  animation-duration: 1.5s;
   border-top: 1px solid var(--white);
+}
+
+@keyframes mainAnimate {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 .aboutContent {
@@ -42,6 +71,10 @@
   font-size: 2rem;
   font-family: var(--main-font);
   color: var(--white);
+}
+
+.aboutTitle span span {
+  transform: translateY(105%) rotate(7deg);
 }
 
 .unique {
@@ -55,6 +88,10 @@
   color: var(--light-gray);
   font-family: var(--sub-font);
   font-weight: 400;
+}
+
+.content span span {
+  transform: translateY(105%) rotate(0deg);
 }
 
 @media screen and (min-width: 768px) {
@@ -76,7 +113,7 @@
     max-width: 800px;
     margin: 0 auto;
     font-size: 3rem;
-    line-height: 72px;
+    line-height: 62px;
   }
 
   .AboutMain {
@@ -93,11 +130,6 @@
   .aboutTitle {
     text-align: left;
     font-size: 3rem;
-  }
-
-  .aboutTitle::after {
-    content: ".";
-    color: var(--green);
   }
 
   .content {
