--- a/src/components/About/Header/Header.module.css
+++ b/src/components/About/Header/Header.module.css
@@ -20,6 +20,31 @@
   line-height: 54px;
 }
 
+.title span span {
+  transform: translateY(105%) rotate(7deg);
+}
+
+.titleChange span span {
+  will-change: transform;
+  animation-name: headerTitleAnimate;
+  animation-duration: 1s;
+  animation-delay: calc(
+    (0.03s * var(--word-index)) + (0.1s * var(--line-index))
+  );
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes headerTitleAnimate {
+  from {
+    transform: translateY(1005) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
+}
+
+
 .content {
   color: var(--light-gray);
   margin-top: 1rem;
@@ -27,6 +52,28 @@
   font-weight: 400;
   line-height: 24.5px;
   font-family: var(--sub-font);
+}
+
+.content span span {
+  transform: translateY(105%) rotate(7deg);
+}
+
+.content span span {
+  will-change: transform;
+  animation-name: headerContentAnimate;
+  animation-duration: 1s;
+  animation-delay: calc(1s + (0.3s * var(--line-index)));
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes headerContentAnimate {
+  from {
+    transform: translateY(105%) rotate(7deg);
+  }
+  to {
+    transform: translateY(0%) rotate(0);
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -41,7 +88,7 @@
 
   .title {
     font-size: 4rem;
-    line-height: 84px;
+    line-height: 80px;
   }
   .content {
     font-size: 1rem;
